<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:orientation="vertical"
android:background="@color/colorPrimary"
android:layout_height="match_parent"
tools:context="com.example.kuzuiauhalifu.auth.PoliceLogInFragment">

<TextView
    android:layout_width="wrap_content"
    android:text="@string/app_name"
    android:textSize="32sp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:textColor="@color/white"
    android:layout_gravity="center_horizontal"
    android:layout_height="wrap_content" />

<TextView
    android:layout_width="wrap_content"
    android:text="Serve &amp; protect"
    android:textSize="26sp"
    android:layout_marginBottom="20dp"
    android:textColor="@color/white"
    android:layout_gravity="center_horizontal"
    android:layout_height="wrap_content" />

<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/police_man"
    android:layout_gravity="center_horizontal"/>

<android.support.design.widget.TextInputLayout
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
    android:layout_width="match_parent" >

    <EditText
        android:id="@+id/username_police_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textColorHint="@color/white"
        android:hint="@string/username"
        android:maxLines="1" />

</android.support.design.widget.TextInputLayout>

<android.support.design.widget.TextInputLayout
    android:layout_height="wrap_content"
    android:layout_marginBottom="30dp"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
    android:layout_width="match_parent" >

    <EditText
        android:id="@+id/password_police_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:maxLines="1" />

</android.support.design.widget.TextInputLayout>

<android.support.design.widget.FloatingActionButton
    android:id="@+id/fab_police_log"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:backgroundTint="@color/colorAccent"
    android:layout_marginBottom="20dp"
    android:src="@drawable/tick" />

<Button
    android:id="@+id/btnReg"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center|bottom"
    android:background="#00000000"
    android:onClick="registerPolice"
    android:text="@string/not_registered"
    android:textSize="25sp"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:textColor="@color/colorAccent" />

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center|bottom"
    android:background="#00000000"
    android:onClick="citizenLogIn"
    android:text="@string/citizen_log"
    android:textSize="25sp"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:textColor="@color/colorAccent" />

</LinearLayout>

